# zest

./: .gitignore  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  SIMULATED_CIRCUIT_SUMMARY.md  example_astable_multivibrator.py  example_astable_multivibrator_simple.py  example_circuit.spice  example_final_demo.py  pyproject.toml  repomix-output-PySpice-org-PySpice.xml  requirements.txt  setup.py  test_analysis_types.py  test_mosfet.spice  test_mosfet_fixed.spice  test_simple_bjt.spice  test_uic_fix.py
docs/: architecture.md  zest_documentation.md
examples/: README.md  crossbar_elaborate.py  crossbar_simple.py  debug_simulated_circuit.py  demo_branch_current.py  demo_complete_workflow.py  example_astable_multivibrator.py  example_astable_multivibrator_comprehensive.py  example_astable_multivibrator_simple.py  example_cascaded_filter.py  example_final_demo.py  example_graph_api.py  example_nested_subcircuits.py  example_new_api_demo.py  example_new_component.py  example_pure_graph_api.py  example_simulated_circuit.py  example_simulation.py  example_subcircuit.py  lif_interactive.py  lif_neuron_clean.py  outer_product.py  pwl_voltage_source_demo.py  schmitt_trigger_opamp.py  switched_cap_interactive.ipynb  switched_cap_multiplier.py  switched_cap_sim.py  voltage_divider.spice  xor.py
temp_spicelib/: tmpgy2asozr_1.net  tmpgy2asozr_1.raw  tmptiwrt2yo_1.net
tests/: EXACT_GOLDEN_COMPARISON.md  GOLDEN_TEST_FINAL.md  GOLDEN_TEST_REFACTORING.md  README_TEST_REORGANIZATION.md  TRANSIENT_ANALYSIS_FRAMEWORK.md  __init__.py  golden_test_framework.py  simple_test_helpers.py  test_cascaded_filter_simulation.py  test_circuit.py  (+12 more)
(+43 files in other folders)
