[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zest"
version = "0.1.0"
description = "Object-oriented circuit graph wrapper for PySpice"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["circuit", "simulation", "spice", "electronics", "eda"]
requires-python = ">=3.7"
dependencies = [
    "pyspice>=1.5.0",
    "networkx>=2.6.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/yourusername/zest"
Repository = "https://github.com/yourusername/zest.git"
Documentation = "https://github.com/yourusername/zest#readme"
"Bug Tracker" = "https://github.com/yourusername/zest/issues"

[tool.setuptools.packages.find]
include = ["zest*"]

[tool.setuptools.package-data]
zest = ["py.typed"] 